# Git-Core-Protocol

./: .coderabbit.yaml  .cursorrules  .gitignore  .propagation.json  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh
.ai/: ARCHITECTURE.md
.gemini/: config.yaml
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: workspace-hub.agent.md
.github/issues/: .issue-mapping.json  DOCS_dependency-workflow-system.md  FEAT_atomicity-checker-rust.md  FEAT_github-email-bot.md  FEAT_model-specific-agents.md  FEAT_rust-dispatcher-agent.md  FEAT_rust-guardian-agent.md  FEAT_workflow-agents-panel.md
.github/workflows/: _repo-config.yml  agent-dispatcher.yml  build-cli.yml  build-tools.yml  ci-health.yml  codex-review.yml  commit-atomicity.yml  context-research.yml  copilot-meta-analysis.yml  dependency-sentinel.yml  e2e-testing.yml  email-cleanup.yml  global-self-healing.yml  guardian-agent.yml  living-context.yml  planner-agent.yml  post-quarantine-analysis.yml  protocol-propagation.yml  self-healing.yml  structure-validator.yml  workflow-validator.yml
docs/: ADAPTIVE_WORKFLOWS.md  ATOMIC_COMMITS.md  CLI_TRUST.md  COMMIT_STANDARD.md  RFC_001_RUST_UNIFICATION.md
scripts/: detect-repo-config.ps1  detect-repo-config.sh  equip-agent.ps1  export-session.ps1  init_project.ps1  init_project.sh  install-cli.ps1  install-cli.sh  migrate-ide-rules.ps1
telemetry/: README.md
tools/context-research-agent/: Cargo.toml
tools/context-research-agent/src/: context.rs  intelligence.rs  main.rs  report.rs  search.rs
(+65 files in other folders)
